# nsz-desktop

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
.github/workflows/: release.yml
electron/: main.js  merge-runner.js  nsz-runner.js  preload.js
scripts/: portable.mjs
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
ui/: App.css  App.tsx
ui/lib/: api.ts  nscb-runner.ts  nsz-runner.ts
